[package]
name = "madera_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
bio = "0.41"
csv = "1.2"
env_logger = "0.10"
indicatif = "0.17"
log = "0.4"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kiddo = "5.0.3"
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "3.0.0"
